--- a/worker/pyproject.toml
+++ b/worker/pyproject.toml
@@ -11,6 +11,7 @@ redis = "^4.0.2"
 loguru = "^0.5.3"
 dataclass-factory = "^2.13"
 requests = "^2.26.0"
+boto3 = "^1.20.20"
 
 [tool.poetry.dev-dependencies]
 
