--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
 
     environment:
-      redis_url: "redis://redis:6379/0"
+      redis_url: "redis://5EBANw2m@redis:6379/0"
       minio_endpoint: "http://s3:9000"
 
     ports:
@@ -18,6 +18,7 @@ services:
 
   redis:
     image: redis:6.2.6
+    command: redis-server --requirepass duEA45Tt
     ports:
       - 6379:6379
 
@@ -30,5 +31,5 @@ services:
       - ./storage/minio:/data
     environment:
       MINIO_ROOT_USER: AMOGUS
-      MINIO_ROOT_PASSWORD: SUSSYIMP0STER
+      MINIO_ROOT_PASSWORD: duEA45Tt
     command: server /data --console-address ":9001"
